TestCases/Errors/threaded_movement/observations/spr_08_obs.spm
 obs   5-14   0.005 
 obs   6-14   0.00375 
 obs   6-15   0.0115857454092748 
 obs   6-16   0.0121226268285092 
 obs   6-17   0.0177777777777778 
 error_value   5-14   0 
 error_value   6-14   0 
 error_value   6-15   0 
 error_value   6-16   0 
 error_value   6-17   0 
